tests/ui/empty.rs
use modular_bitfield::prelude::*;

#[bitfield]
struct Unit;

#[bitfield]
struct Named {}

#[bitfield]
struct Unnamed();

fn main() {}
